<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcadapp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image"
        android:src="@drawable/app1" />

    <EditText
        android:id="@+id/IpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:hint="@string/indirizzo_ip_server"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/IpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="insertIp"
        android:text="@string/inserisci" />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLogIn"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_non_sei_ancora_registrato" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doSignIn"
        android:text="@string/registrati"
        android:textAlignment="center"

        />

</LinearLayout>
